Opened 9 years ago

Closed 9 years ago

#12833 closed bug (fixed)

[Patch] tools/fs_shell/block_cache.cpp: fix gcc warnings

Reported by: mt Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: Applications/Command Line Tools Version: R1/Development
Keywords: fs_shell Cc:
Blocked By: Blocking:
Platform: All

Description

Since 'maxAccessed' and 'count' is int32, use INT32_MAX instead of LONG_MAX.

/home/haiku/haiku/haiku/src/tools/fs_shell/block_cache.cpp:127:50: warning: overflow in implicit constant conversion [-Woverflow]
  void   RemoveUnusedBlocks(int32_t maxAccessed = LONG_MAX,
                                                  ^
/home/haiku/haiku/haiku/src/tools/fs_shell/block_cache.cpp:128:23: warning: overflow in implicit constant conversion [-Woverflow]
       int32_t count = LONG_MAX);
                       ^

Attachments (1)

0021-block_cache.cpp-fix-gcc-warnings.patch (1004 bytes ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50402.

Note: See TracTickets for help on using tickets.