block_cache.cpp: fix gcc warnings

Since 'maxAccessed' and 'count' is int32,
use INT32_MAX instead of LONG_MAX.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Ticket: #12833